--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,11 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = plerup/EspSoftwareSerial@^8.2.0
+lib_deps = 
+    plerup/EspSoftwareSerial@^8.2.0
+	adafruit/Adafruit CCS811 Library@^1.1.3
+	closedcube/ClosedCube HDC1080@^1.3.2
+	SPI
+	me-no-dev/ESP Async WebServer@^1.2.3
+	bblanchon/ArduinoJson @ ^6.21.3
+monitor_speed = 9600
